feat: 更新数据库文件及文件处理逻辑